--- a/Práctica 1/index.html
+++ b/Práctica 1/index.html
@@ -25,14 +25,80 @@
             </nav>
         </div>
     </header>
-    <main>
+
+    <aside class="left-aside">
+        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/1e/Wikipedia-logo-v2-es.svg/800px-Wikipedia-logo-v2-es.svg.png"
+            alt="Wikipedia logo" width="100px">
+        <nav>
+            <ul>
+                <li><a href="">Main page</a></li>
+                <li><a href="">Contents</a></li>
+                <li><a href="">Current events</a></li>
+                <li><a href="">Random article</a></li>
+                <li><a href="">About Wikipedia</a></li>
+                <li><a href="">Contact us</a></li>
+                <li><a href="">Donate</a></li>
+            </ul>
+        </nav>
+        <nav>
+            Contribute
+            <hr>
+            <ul>
+                <li><a href="">Help</a></li>
+                <li><a href="">Learn to edit</a></li>
+                <li><a href="">Community portal</a></li>
+                <li><a href="">Random article</a></li>
+                <li><a href="">Recent changes</a></li>
+                <li><a href="">Upload file</a></li>
+            </ul>
+        </nav>
+        <nav>
+            Tools
+            <hr>
+            <ul>
+                <li><a href="">What links here</a></li>
+                <li><a href="">Related changes</a></li>
+                <li><a href="">Special pages</a></li>
+                <li><a href="">Permanent link</a></li>
+                <li><a href="">Page information</a></li>
+                <li><a href="">Cite this page</a></li>
+                <li><a href="">Wikidata item</a></li>
+            </ul>
+        </nav>
+        <nav>
+            Print/export
+            <hr>
+            <ul>
+                <li><a href="">Download as PDF</a></li>
+                <li><a href="">Printable version</a></li>
+            </ul>
+        </nav>
+        <nav>
+            In other projects
+            <hr>
+            <ul>
+                <li><a href="">Wikibooks</a></li>
+                <li><a href="">Wikiversity</a></li>
+            </ul>
+        </nav>
+        <nav>
+            Languages
+            <hr>
+            <ul>
+                <li><a href="">English</a></li>
+            </ul>
+        </nav>
+    </aside>
+    <main class="main">
         <article>
             <section>
+                <div>
                 <header>
                     <h1>HTML5</h1>
                     <hr>
                     From Wikipedia, the free encyclopedia
                 </header>
+                <div>
                 <p>
                     HTML5 is a markup language used for structuring and presenting content on the World Wide Web. It is
                     the fifth and latest major version of HTML that is a World Wide Web Consortium (W3C) recommendation.
@@ -70,84 +136,86 @@
                     defines the processing for any invalid
                     documents.[7]
                 </p>
-                <aside>
-                    <strong>HTML5</strong>
-                    <strong> (HyperText Markup Language)</strong>
-                    <table class="aside-table">
-                        <tr>
-                            <th><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/61/HTML5_logo_and_wordmark.svg/800px-HTML5_logo_and_wordmark.svg.png"
-                                    alt="HTML Logo" width="100px"></th>
-                        </tr>
-                        <tr>
-                            <th> <a href="">Filename extension</a></th>
-                            <td>.html, .htm</td>
-                        </tr>
-                        <tr>
-                            <th><a href=""> Internet media type</a></th>
-                            <td>text/hmtl</td>
-                        </tr>
-                        <tr>
-                            <th><a href=""> Type code</a></th>
-                            <td>TEXT</td>
-                        </tr>
-                        <tr>
-                            <th><a href=""> Uniform Type Identifier (UTI)</a></th>
-                            <td>public.html</td>
-                        </tr>
-                        <tr>
-                            <th> Developed by</th>
-                            <td><a href=""> W3C</a></td>
-                        </tr>
-                        <tr>
-                            <th> Initial release</th>
-                            <td>28 october 2014</td>
-                        </tr>
-                        <tr>
-                            <th> Type of format</th>
-                            <td><a href=""> Markup language</a></td>
-                        </tr>
-                        <tr>
-                            <th><a href=""> Standard</a></th>
-                            <td>HTML 5.2</td>
-                        </tr>
-                        <tr>
-                            <th> <a href=""> Open format?</a></th>
-                            <td>Yes</td>
-                        </tr>
-                    </table>
-                </aside>
-                <aside>
-                    <table class="aside-table">
-                        <tr>
-                            <th><a href="">HTML</a></th>
-                        </tr>
-                        <tr>
-                            <th>
-                                <ul>
-                                    <li><a href="">Dynamic HTML</a></li>
-                                    <li><a href="">XHTML</a></li>
-                                    <li><a href="">HTML element</a></li>
-                                </ul>
-                            </th>
-                        </tr>
-                        <tr>
-                            <th>Comparisons</th>
-                        </tr>
-                        <tr>
-                            <th>
-                                <ul>
-                                    <li><a href="">Document markup languages</a></li>
-                                    <li><a href="">HTML suport</a></li>
-                                    <li><a href="">XHTML</a></li>
-                                </ul>
-                            </th>
-                        </tr>
-                    </table>
-                </aside>
-                <div class="contents">
-                    <menu></menu>
-
+            </div>
+                <div>
+                    <aside class="aside-right">
+                        <strong>HTML5</strong>
+                        <strong> (HyperText Markup Language)</strong>
+                        <table class="aside-table">
+                            <tr>
+                                <th><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/61/HTML5_logo_and_wordmark.svg/800px-HTML5_logo_and_wordmark.svg.png"
+                                        alt="HTML Logo" width="100px"></th>
+                            </tr>
+                            <tr>
+                                <th> <a href="">Filename extension</a></th>
+                                <td>.html, .htm</td>
+                            </tr>
+                            <tr>
+                                <th><a href=""> Internet media type</a></th>
+                                <td>text/hmtl</td>
+                            </tr>
+                            <tr>
+                                <th><a href=""> Type code</a></th>
+                                <td>TEXT</td>
+                            </tr>
+                            <tr>
+                                <th><a href=""> Uniform Type Identifier (UTI)</a></th>
+                                <td>public.html</td>
+                            </tr>
+                            <tr>
+                                <th> Developed by</th>
+                                <td><a href=""> W3C</a></td>
+                            </tr>
+                            <tr>
+                                <th> Initial release</th>
+                                <td>28 october 2014</td>
+                            </tr>
+                            <tr>
+                                <th> Type of format</th>
+                                <td><a href=""> Markup language</a></td>
+                            </tr>
+                            <tr>
+                                <th><a href=""> Standard</a></th>
+                                <td>HTML 5.2</td>
+                            </tr>
+                            <tr>
+                                <th> <a href=""> Open format?</a></th>
+                                <td>Yes</td>
+                            </tr>
+                        </table>
+                    </aside>
                 </div>
+                <div>
+                    <aside class="aside-right">
+                        <table class="aside-table">
+                            <tr>
+                                <th><a href="">HTML</a></th>
+                            </tr>
+                            <tr>
+                                <th>
+                                    <ul>
+                                        <li><a href="">Dynamic HTML</a></li>
+                                        <li><a href="">XHTML</a></li>
+                                        <li><a href="">HTML element</a></li>
+                                    </ul>
+                                </th>
+                            </tr>
+                            <tr>
+                                <th>Comparisons</th>
+                            </tr>
+                            <tr>
+                                <th>
+                                    <ul>
+                                        <li><a href="">Document markup languages</a></li>
+                                        <li><a href="">HTML suport</a></li>
+                                        <li><a href="">XHTML</a></li>
+                                    </ul>
+                                </th>
+                            </tr>
+                        </table>
+                    </aside>
+                </div>
+
                 <div class="navigation">
                     <ol>
                         <li>
@@ -190,7 +258,7 @@
                         </li>
                     </ol>
                 </div>
-
+            </div>
             </section>
             <section>
                 <header>
@@ -339,7 +407,7 @@
                             <li>Timed Media Playback</li>
                         </ul>
                     </p>
-                    <aside>
+                    <aside class="aside-right">
                         <div class="aside-div">
                             <img src="https://upload.wikimedia.org/wikipedia/commons/7/7f/HTML5_APIs_and_related_technologies_taxonomy_and_status.svg"
                                 alt="HTML related api´s" width="400px">
@@ -375,7 +443,8 @@
                     <p>The following is a cursory list of differences and some specific examples.
 
                         <ul>
-                            <li>New parsing rules: oriented towards flexible parsing and compatibility; not based on SGML</li>
+                            <li>New parsing rules: oriented towards flexible parsing and compatibility; not based on
+                                SGML</li>
                             <li>Ability to use inline SVG and MathML in text/html</li>
                         </ul>
                     </p>
@@ -386,61 +455,110 @@
 
             <section>
                 <header>
-                    <h2></h2>
+                    <h2>Logo</h2>
                     <hr>
 
                 </header>
                 <p>
+                    On 18 January 2011, the W3C introduced a logo to represent the use of or interest in HTML 5. Unlike
+                    other badges previously issued by the W3C, it does not imply validity or conformance to a certain
+                    standard. As of 1 April 2011, this logo is official.
+                </p>
+                <aside class="aside-right">
+                    <div class="aside-div">
+                        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/61/HTML5_logo_and_wordmark.svg/800px-HTML5_logo_and_wordmark.svg.png"
+                            alt="The W3C HTML5 logo" width="100px">
+                        <p>The W3C HTML5 logo</p>
+                    </div>
 
+                </aside>
+
+            </section>
+            <section>
+                <header>
+                    <h2>Digital rights management</h2>
+                    <hr>
+
+                </header>
+                <p>
+                    Industry players including the BBC, Google, Microsoft, Apple Inc. have been lobbying for the
+                    inclusion of Encrypted Media Extensions (EME),[124][125][126][127][128] a form of digital rights
+                    management (DRM), into the HTML 5 standard. As of the end of 2012 and the beginning of 2013, 27
+                    organisations[129] including the Free Software Foundation[130] have started a campaign against
+                    including digital rights management in the HTML 5 standard.[131][132] However, in late September
+                    2013, the W3C HTML Working Group decided that Encrypted Media Extensions, a form of DRM, was "in
+                    scope" and will potentially be included in the HTML 5.1 standard.[133][134] WHATWG's "HTML Living
+                    Standard" continued to be developed without DRM-enabled proposals.
                 </p>
 
             </section>
             <section>
                 <header>
-                    <h2></h2>
+                    <h2>See also</h2>
                     <hr>
 
                 </header>
-                <p>
-
-                </p>
+                <ul>
+                    <li><a href="">Cache manifest in HTML5</a></li>
+                    <li><a href="">Canvas element</a></li>
+                    <li><a href="">Comparison of layout engines (HTML5)</a></li>
+                    <li><a href="">David Hyatt</a>, Apple editor of HTML5 specs</li>
+                    <li><a href="">Ian Hickson</a>, Google main editor of HTML5 specs</li>
+                    <li><a href="">Polyglot HTML5</a></li>
+                </ul>
 
             </section>
             <section>
                 <header>
-                    <h2></h2>
+                    <h2>References</h2>
                     <hr>
 
                 </header>
-                <p>
-
-                </p>
+                <ol>
+                    <li><a href="">"Mac Developer Library: System-Declared Uniform Type Identifiers". Apple.</a>17
+                        November 2009.</li>
+                    <li><a href=""> "HTML5: A vocabulary and associated APIs for HTML and XHTML"</a>22 January 2008.
+                        Retrieved 28 January 2009.</li>
+                    <li><a href="">"HTML5 is a W3C recommendation"</a>28 October 2014. Retrieved 28 October 2014.</li>
+                </ol>
 
             </section>
             <section>
                 <header>
-                    <h2></h2>
+                    <h2>External links</h2>
                     <hr>
 
                 </header>
-                <p>
-
-                </p>
-
-            </section>
-            <section>
-                <header>
-                    <h2></h2>
-                    <hr>
-
-                </header>
-                <p>
-
-                </p>
+                <ul>
+                    <li><a href="">Latest W3C version of HTML</a></li>
+                    <li><a href="">Latest WHATWG version of HTML</a></li>
+                    <li><a href="">HTML Media Extensions Working Group</a></li>
+                    <li><a href="">HTML.next</a>, Feature requests for future versions of HTML</li>
+                </ul>
 
             </section>
         </article>
     </main>
+    <footer>
+        <p>
+            This page was last edited on 6 September 2020, at 03:54 (UTC).
+            Text is available under the <a href="">Creative Commons Attribution-ShareAlike License</a>; additional terms
+            may apply. By
+            using this site, you agree to the <a href="">Terms of Use and Privacy Policy</a>. Wikipedia® is a registered
+            trademark of
+            the <a href="">Wikimedia Foundation, Inc.</a>, a non-profit organization.
+        </p>
+        <nav>
+            <a href="">Privacy policy</a>
+            <a href=""> About wikipedia</a>
+            <a href=""> Disclaimers</a>
+            <a href=""> Contact Wikipedia</a>
+            <a href=""> Mobile view</a>
+            <a href=""> Developers</a>
+            <a href=""> Statistics</a>
+            <a href=""> Cookie statement</a>
+        </nav>
+    </footer>
 
 
 </body>
