CSS style changes

--- a/Práctica 1/index.html
+++ b/Práctica 1/index.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-    <aside class="left-aside">
+    <header class="left-aside">
         <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/1e/Wikipedia-logo-v2-es.svg/800px-Wikipedia-logo-v2-es.svg.png"
             alt="Wikipedia logo" width="100px">
         <nav>
@@ -74,19 +74,22 @@
                 <li><a href="">English</a></li>
             </ul>
         </nav>
-    </aside>
-    <header>
+    </header>
+
+    <header class="top-header">
         <div>
             <nav>
-                <a href="">Article</a>
-                <a href=""> Talk</a>
+                <div class="left-nav">
+                    <a href="">Article</a>
+                    <a href=""> Talk</a>
+                </div>
                 <div class="right-nav">
-                <a href=""> Read</a>
-                <a href=""> Edit</a>
-                <a href=""> View Story</a>
-                <input type="text" name="search">
-                <i class="fa fa-search" aria-hidden="true"></i>
-            </div>
+                    <a href=""> Read</a>
+                    <a href=""> Edit</a>
+                    <a href=""> View Story</a>
+                    <input type="text" name="search" placeholder="Search Wikipedia">
+                    <i class="fa fa-search" aria-hidden="true"></i>
+                </div>
             </nav>
         </div>
     </header>
