--- a/Práctica 1/index.html
+++ b/Práctica 1/index.html
@@ -77,7 +77,7 @@
     </header>
 
     <header class="top-header">
-        <div>
+        <div class="header-nav">
             <nav>
                 <div class="left-nav">
                     <a href="">Article</a>
@@ -159,7 +159,7 @@
                             documents.[7]
                         </p>
                     </div>
-                    <div>
+                    <div class="asides">
                         <aside class="aside-right">
                             <strong>HTML5</strong>
                             <strong> (HyperText Markup Language)</strong>
@@ -206,8 +206,7 @@
                                 </tr>
                             </table>
                         </aside>
-                    </div>
-                    <div>
+
                         <aside class="aside-right">
                             <table class="aside-table">
                                 <tr>
