CSS style changes

--- a/Práctica 1/index.html
+++ b/Práctica 1/index.html
@@ -477,7 +477,7 @@
             </section>
 
 
-            <section id="4">
+            <section id="4" class="four">
                 <header>
                     <h2>Logo</h2>
                     <hr>
