--- a/Práctica 1/index.html
+++ b/Práctica 1/index.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-    <header class="left-aside">
+    <header class="left-menu">
         <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/1e/Wikipedia-logo-v2-es.svg/800px-Wikipedia-logo-v2-es.svg.png"
             alt="Wikipedia logo" width="100px">
         <nav>
