--- a/Práctica 1/index.html
+++ b/Práctica 1/index.html
@@ -123,7 +123,7 @@
                             <li> <a class="a-tags-sidebar" href=""> View Story</a></li>
                             <input class="regular-font search-input" type="text" name="search"
                                 placeholder="Search Wikipedia">
-                            <button class="search-button"><i class="fa fa-search" aria-hidden="true"></i></button>
+                            <button class="search-button" aria-label="Search button"><i class="fa fa-search" aria-hidden="true"></i></button>
                         </ul>
 
 
