--- a/Flex/flex.html
+++ b/Flex/flex.html
@@ -13,20 +13,20 @@
 
 <body>
     <div class="main-container">
-        <div class="navbar">
-            <div class="left-navbar">
-                <a href="">Item 1</a>
-                <a href="">Item 2</a>
-                <a href="">Item 3</a>
-            </div>
-            <div class="right-navbar">
+        <header class="navbar">
+            <nav class="left-navbar">
+                <a href="">Home</a>
+                <a href="">Van Gogh</a>
+                <a href="">Animation</a>
+            </nav>
+            <nav class="right-navbar">
                 <i class="fa fa-twitter-square fa-3x" aria-hidden="true"></i>
                 <i class="fa fa-facebook-official fa-3x" aria-hidden="true"></i>
                 <i class="fa fa-instagram fa-3x" aria-hidden="true"></i>
-            </div>
+            </nav>
 
 
-        </div>
+        </header>
         <div id="grid" class="grid">
             <div id="box" class="box box1">
                 <img class="image-painting" src="./painting/1.png" alt="">
