--- a/API NASA/public/index.html
+++ b/API NASA/public/index.html
@@ -14,7 +14,7 @@
 <body>
     <header>
         <img src="https://upload.wikimedia.org/wikipedia/commons/e/e5/NASA_logo.svg" alt="NASA logo">
-        <h1 class="title">NASA APOD</h1>
+        <h1 class="title">NASA space images</h1>
     </header>
     <div class="p p-1"></div>
     <div class="p p-2"></div>
