--- a/Project1/public/index.html
+++ b/Project1/public/index.html
@@ -43,17 +43,16 @@
             <h1 class="h-color">Cristian Alvarado Oviedo</h1>
         </header>
         <section class="right-section personal">
-            <div class="text third-color section-text general-font box-shadow">
+            <div class="text third-color section-text general-font box-shadow has-light-font">
+                <h3>Contact information</h3>
+                <ul>
+                    <li>crisal1395@gmail.com</li>
+                    <li> 86657584</li>
+                </ul>
+                <h3>About me</h3>
                 <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                    labore
-                    et
-                    dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-                    aliquip
-                    ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum
-                    dolore eu
-                    fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia
-                    deserunt mollit anim id est laborum.
+                    Graduate from the Universidad de Costa Rica. Worked for six months making components as a freelance
+                    frontend developer in a company called Imactus.
                 </p>
             </div>
             <div class="section-img animated-box-shadow">
@@ -67,9 +66,9 @@
         </header>
         <section class="left-section education">
             <div class="section-img animated-box-shadow">
-                <img class="section-image" src="./images/ucr.jpg" alt="">
+                <img class="section-image" src="./images/ucr.jpg" alt="Universidad de Costa Rica">
             </div>
-            <div class="text third-color section-text general-font box-shadow">
+            <div class="text third-color section-text general-font box-shadow has-light-font">
 
                 <ul>
                     <li>2014 - 2019, Universidad de Costa Rica
@@ -86,7 +85,7 @@
             <h2 class="h-color">Working experience</h2>
         </header>
         <section class="right-section work">
-            <div class="text third-color section-text general-font box-shadow">
+            <div class="text third-color section-text general-font box-shadow has-light-font">
                 <ul>
                     <li> Sep 2019 - Apr 2020, Frontend Developer, Imactus
                         Working on an website for the medical specialities postgraduate program
@@ -94,7 +93,7 @@
                 </ul>
             </div>
             <div class="section-img animated-box-shadow">
-                <img class="section-image" src="./images/computer.jpg" alt="">
+                <img class="section-image" src="./images/computer.jpg" alt="Computer">
             </div>
         </section>
 
@@ -104,9 +103,9 @@
         </header>
         <section class="programming left-section">
             <div class="section-img animated-box-shadow">
-                <img class="section-image" src="./images/programming.png" alt="">
+                <img class="section-image" src="./images/programming.png" alt="Web programming languages">
             </div>
-            <div class="text third-color section-text general-font box-shadow">
+            <div class="text third-color section-text general-font box-shadow has-light-font">
                 <h3>Programming</h3>
                 <ul>
                     <li>Angular</li>
@@ -114,16 +113,14 @@
                     <li>HTML</li>
                     <li>CSS</li>
                     <li>Java</li>
-                    <li>C++</li>
                     <li>Android</li>
-                    <li>Linux</li>
                 </ul>
             </div>
         </section>
 
 
         <section class="softSkills right-section">
-            <div class="text third-color section-text general-font box-shadow">
+            <div class="text third-color section-text general-font box-shadow has-light-font">
                 <h3>Soft Skills</h3>
                 <ul>
                     <li>Teamwork</li>
@@ -135,7 +132,7 @@
                 </ul>
             </div>
             <div class="section-img animated-box-shadow">
-                <img class="section-image" src="./images/teamwork.png" alt="">
+                <img class="section-image" src="./images/teamwork.png" alt="Teamwork">
             </div>
         </section>
 
@@ -146,9 +143,9 @@
         </header>
         <section class="left-section interests">
             <div class="section-img animated-box-shadow">
-                <img class="section-image" src="./images/nature.jpg" alt="">
+                <img class="section-image" src="./images/nature.jpg" alt="Nature">
             </div>
-            <div class="text third-color section-text general-font box-shadow">
+            <div class="text third-color section-text general-font box-shadow has-light-font">
                 <ul>
                     <li>Technology</li>
                     <li>Sports</li>
@@ -161,9 +158,20 @@
 
     </main>
     <footer class="second-color footer-section">
-        <div><i class="fa fa-linkedin-square fa-2x has-light-font" aria-hidden="true"></i><a
-                class="nav-option has-light-font general-font"
+
+        <div><i class="fa fa-linkedin-square fa-2x has-light-font" aria-hidden="true"></i>
+            <a class="nav-option has-light-font general-font"
                 href="https://www.linkedin.com/in/cristian-alvarado-24b3ab119/">LinkedIn</a> </div>
+        <div>
+            <i class="fa fa-phone-square fa-2x has-light-font" aria-hidden="true"></i>
+            <a class="nav-option has-light-font general-font" href="tel:86657584">86657584</a>
+        </div>
+        <div>
+            <i class="fa fa-envelope fa-2x has-light-font" aria-hidden="true"></i>
+            <a class="nav-option has-light-font general-font"
+                href="mailto:crisal1395@gmail.com">crisal1395@gmail.com</a>
+        </div>
+
     </footer>
 
     <script src="./js/cv.js" async defer></script>
