--- a/Immersive Day 5_ - Responsive design Lab/Responsive Design Lab Starter Code/index.html
+++ b/Immersive Day 5_ - Responsive design Lab/Responsive Design Lab Starter Code/index.html
@@ -7,122 +7,115 @@
   <title>Responsive lab</title>
   <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
   <link rel="stylesheet" href="styles/styles.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
 <body>
-  <header>
-    <nav class="header-item header-left">
+  <header class="header">
+    <nav class=" header__left">
       <a>Home</a> |
-      <a>About</a> |
-      <a>Contact</a>
+      <a>Pokemon</a> |
+      <a>Badges</a>
     </nav>
-    <div class="header-item logo">
-      Logo
+    <div class=" header__logo">
+      <img src="./images/International_Pokémon_logo.svg" alt="Pokemon logo">
     </div>
-    <div class="header-item header-right">
+    <div class="header__right">
       User:
-      <a>John Smith</a> |
+      <a>Cristian Alvarado</a> |
       <a>Logout</a>
     </div>
   </header>
   <section class="hero">
     <div>
-      <h2 class="hero-title">Hero Title</h2>
-      <h3 class="hero-tagline">Tag Line</h3>
+      <h2 class="hero__title">Pokemon Emerald</h2>
+      <h3 class="hero__tagline">Cristian´s favorite pokemon from Hoenn region</h3>
     </div>
   </section>
   <main>
     <section class="card-list">
-      <div class="card">
-        <div class="card-content">
-          Content
+      <div class="card-list__card">
+        <div class="card-list__card-content">
+          <a href="http://pokemondb.net/pokedex/metagross"><img src="https://img.pokemondb.net/sprites/ruby-sapphire/normal/metagross.png" alt="Metagross"></a>
         </div>
-        <h4 class="card-title">
-          Title
+        <h4 class="card-list__card-title">
+          Metagross
         </h4>
       </div>
-      <div class="card">
-        <div class="card-content">
-          Content
+      <div class="card-list__card">
+        <div class="card-list__card-content">
+          <a href="http://pokemondb.net/pokedex/glalie"><img src="https://img.pokemondb.net/sprites/ruby-sapphire/normal/glalie.png" alt="Glalie"></a>
         </div>
-        <h4 class="card-title">
-          Title
+        <h4 class="card-list__card-title">
+          Glalie
         </h4>
       </div>
-      <div class="card">
-        <div class="card-content">
-          Content
+      <div class="card-list__card">
+        <div class="card-list__card-content">
+          <a href="http://pokemondb.net/pokedex/blaziken"><img src="https://img.pokemondb.net/sprites/emerald/normal/blaziken.png" alt="Blaziken"></a>
         </div>
-        <h4 class="card-title">
-          Title
+        <h4 class="card-list__card-title">
+          Blaziken
         </h4>
       </div>
-      <div class="card">
-        <div class="card-content">
-          Content
+      <div class="card-list__card">
+        <div class="card-list__card-content">
+          <a href="http://pokemondb.net/pokedex/groudon"><img src="https://img.pokemondb.net/sprites/emerald/normal/groudon.png" alt="Groudon"></a>
         </div>
-        <h4 class="card-title">
-          Title
+        <h4 class="card-list__card-title">
+          Groudon
         </h4>
       </div>
-      <div class="card">
-        <div class="card-content">
-          Content
+      <div class="card-list__card">
+        <div class="card-list__card-content">
+          <a href="http://pokemondb.net/pokedex/rayquaza"><img src="https://img.pokemondb.net/sprites/emerald/normal/rayquaza.png" alt="Rayquaza"></a>
         </div>
-        <h4 class="card-title">
-          Title
+        <h4 class="card-list__card-title">
+          Rayquaza
         </h4>
       </div>
-      <div class="card">
-        <div class="card-content">
-          Content
+      <div class="card-list__card">
+        <div class="card-list__card-content">
+          <a href="http://pokemondb.net/pokedex/salamence"><img src="https://img.pokemondb.net/sprites/emerald/normal/salamence.png" alt="Salamence"></a>
         </div>
-        <h4 class="card-title">
-          Title
-        </h4>
-      </div>
-      <div class="card">
-        <div class="card-content">
-          Content
-        </div>
-        <h4 class="card-title">
-          Title
+        <h4 class="card-list__card-title">
+          Salamence
         </h4>
       </div>
     </section>
     <section class="activity-list">
       <div>
-        <h3>Activity Feed</h3>
-        <div class="activity-item">
-          Activity
+        <h3>Hoenn region medals</h3>
+        <div class="activity-list__activity-item">
+          <img src="https://cdn.bulbagarden.net/upload/6/63/Stone_Badge.png" alt="Hoenn stone badge">
         </div>
-        <div class="activity-item">
-          Activity
+        <div class="activity-list__activity-item">
+          <img src="https://cdn.bulbagarden.net/upload/9/97/Knuckle_Badge.png" alt="Hoenn knuckle badge">
         </div>
-        <div class="activity-item">
-          Activity
+        <div class="activity-list__activity-item">
+          <img src="https://cdn.bulbagarden.net/upload/3/34/Dynamo_Badge.png" alt="Hoenn dynamo medal">
         </div>
-        <div class="activity-item">
-          Activity
+        <div class="activity-list__activity-item">
+          <img src="https://cdn.bulbagarden.net/upload/c/c4/Heat_Badge.png" alt="Hoenn heat badge">
         </div>
-        <div class="activity-item">
-          Activity
+        <div class="activity-list__activity-item">
+          <img src="https://cdn.bulbagarden.net/upload/6/63/Balance_Badge.png" alt="Hoenn balance badge">
         </div>
-        <div class="activity-item">
-          Activity
+        <div class="activity-list__activity-item">
+          <img src="https://cdn.bulbagarden.net/upload/6/62/Feather_Badge.png" alt="Hoenn feather badge">
+        </div>
+        <div class="activity-list__activity-item">
+          <img src="https://cdn.bulbagarden.net/upload/c/cc/Mind_Badge.png" alt="Hoenn mind badge">
+        </div>
+        <div class="activity-list__activity-item">
+          <img src="https://cdn.bulbagarden.net/upload/9/9b/Rain_Badge.png" alt="Hoenn rain badge">
         </div>
       </div>
     </section>
   </main>
   <footer>
-    <section class="footer footer-left">
-      Left Footer
-    </section>
-    <section class="footer footer-center">
-      Center Footer
-    </section>
-    <section class="footer footer-right">
-      Right Footer
+    <section class="footer footer__center">
+      <i class="fa fa-gamepad fa-2x" aria-hidden="true"></i>
     </section>
   </footer>
 </body>
