--- a/Project1/index.html
+++ b/Project1/index.html
@@ -51,6 +51,7 @@
                 </ul>
                 <h3>About me</h3>
                 <p>
+                    I have always loved everything related with technology.
                     Graduate from the Universidad de Costa Rica. Worked for six months making components as a freelance
                     frontend developer in a company called Imactus.
                 </p>
